force-app/main/default/objects/Supplier_Bill_Snapshot__c/Supplier_Bill_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Supplier Bill Snapshot</label>
    <nameField>
        <displayFormat>SBS-{00000000}</displayFormat>
        <label>Supplier Bill Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Bill Snapshot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>