force-app/main/default/objects/Supplier_Bill_Snapshot__c/fields/Bill_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bill_Amount__c</fullName>
    <label>Bill Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>