force-app/main/default/objects/Supplier_Bill_Snapshot__c/fields/Bill_Settled_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill_Settled_Date__c</fullName>
    <label>Bill Settled Date</label>
    <type>Date</type>
</CustomField>