force-app/main/default/objects/Supplier_Bill_Snapshot__c/fields/Brand_Quote__c.field-meta.xml
<CustomField>
    <fullName>Brand_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand Quote</label>
    <referenceTo>Brand_Quote__c</referenceTo>
    <relationshipLabel>Supplier Bill Snapshot</relationshipLabel>
    <relationshipName>Supplier_Bill_Snapshot</relationshipName>
    <type>Lookup</type>
</CustomField>