force-app/main/default/objects/Supplier_Bill_Snapshot__c/fields/Chart_of_Account__c.field-meta.xml
<CustomField>
    <fullName>Chart_of_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chart of Account</label>
    <referenceTo>Chart_of_Account__c</referenceTo>
    <relationshipLabel>Supplier Bill Snapshot</relationshipLabel>
    <relationshipName>Supplier_Bill_Snapshot</relationshipName>
    <type>Lookup</type>
</CustomField>