force-app/main/default/objects/Supplier_Bill_Snapshot__c/fields/Is_Brand__c.field-meta.xml
<CustomField>
    <fullName>Is_Brand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Brand</label>
    <type>Checkbox</type>
</CustomField>