force-app/main/default/objects/Supplier_Bill_Snapshot__c/fields/Order_or_Service__c.field-meta.xml
<CustomField>
    <fullName>Order_or_Service__c</fullName>
    <label>Order or Service</label>
    <length>150</length>
    <type>Text</type>
</CustomField>