force-app/main/default/objects/Supplier_Bill_Snapshot__c/fields/Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Owner_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account</relationshipName>
    <type>Lookup</type>
</CustomField>