force-app/main/default/objects/Supplier_Bill_Snapshot__c/fields/Ownerids__c.field-meta.xml
<CustomField>
    <fullName>Ownerids__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Supplier Bill Snapshot (Owner Id)</relationshipLabel>
    <relationshipName>Supplier_Bill_Snapshot1</relationshipName>
    <type>Lookup</type>
</CustomField>