force-app/main/default/objects/Supplier_Bill_Snapshot__c/fields/PO_Settled_Date__c.field-meta.xml
<CustomField>
    <fullName>PO_Settled_Date__c</fullName>
    <label>PO Settled Date</label>
    <type>Date</type>
</CustomField>