force-app/main/default/objects/Supplier_Bill_Snapshot__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <label>Reference #</label>
    <length>150</length>
    <type>Text</type>
</CustomField>