force-app/main/default/objects/Supplier_Bill_Snapshot__c/fields/Shipping_Terms__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Terms__c</fullName>
    <label>Shipping Terms</label>
    <length>150</length>
    <type>Text</type>
</CustomField>