force-app/main/default/objects/Supplier_Bill_Snapshot__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Supplier Bill Snapshot</relationshipLabel>
    <relationshipName>Supplier_Bill_Snapshot</relationshipName>
    <type>Lookup</type>
</CustomField>