force-app/main/default/objects/Supplier_Bill_Snapshot__c/fields/Sold_to_Party__c.field-meta.xml
<CustomField>
    <fullName>Sold_to_Party__c</fullName>
    <label>Sold to Party</label>
    <length>150</length>
    <type>Text</type>
</CustomField>