force-app/main/default/objects/Supplier_Bill_Snapshot__c/fields/Supplier_Address__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Address__c</fullName>
    <label>Supplier Address</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>