force-app/main/default/objects/Supplier_Bill_Snapshot__c/fields/Total_Payments__c.field-meta.xml
<CustomField>
    <fullName>Total_Payments__c</fullName>
    <label>Total Payments</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>